2008-07-16  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve explanation of option 'hosts' in
	ejabberd_service
	* doc/guide.html: Likewise

2008-07-12  Badlop  <badlop@process-one.net>

	* src/configure.ac: Improve legibility
	* src/aclocal.m4: Likewise
	* src/configure: Likewise

	* src/ejabberdctl.template: Remove garbage variable. Document node
	option

	* doc/guide.tex: Add references to sections.
	* doc/guide.html: Likewise

2008-07-11  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document how to insert a newline character in
	welcome_message (EJAB-501)
	* src/ejabberd.cfg.example: Likewise

2008-07-11  Christophe Romain  <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Backport C2S blacklist support from trunk
	was (EJAB-625).
	* src/mod_ip_blacklist.erl: Likewise
	* src/jlib.erl: Added IP format tuple to string function
	* src/ejabberd_socket.erl: Properly handled c2s start failure (happen
	for blacklisted IP).

2008-07-10  Badlop  <badlop@process-one.net>

	* src/configure.ac: Don't check for erlang header file (EJAB-232)
	* src/configure: Likewise

2008-07-09  Badlop  <badlop@process-one.net>

	* src/configure.ac: Check for erlang header files (EJAB-232)
	* src/configure: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Fix compilator warnings

	* src/mod_muc/mod_muc_log.erl: Fix XHTML compliance: ensure some
	language is set, include ID attribute in each message, add
	microseconds to ensure unique value (EJAB-497)

	* src/ejabberd_config.erl (load_file): error message on sasl.log
	is not flattened (EJAB-616)

	* doc/guide.tex: mod_muc_log XMPP URI supports the updated version
	RFC 5122 (EJAB-631)
	* doc/guide.html: Likewise

2008-07-08  Badlop  <badlop@process-one.net>

	* tools/ejabberdctl: Work also when 'which' is unavailable

2008-07-08  Christophe Romain  <christophe.romain@process-one.net>

	* src/web/ejabberd_http_poll.erl: improve ip fetching patch

2008-07-07  Badlop  <badlop@process-one.net>
