@@ -1,3 +1,12 @@
+2008-07-16  Alexey Shchepin  <alexey@process-one.net>
+
+	* src/web/ejabberd_http_poll.erl: Report connection's IP address 
+
+	* src/ejabberd_c2s.erl: Rolled back the previous IP getting patch
+	* src/ejabberd_sm.erl: Likewise
+	* src/ejabberd_receiver.erl: Likewise
+	* src/web/ejabberd_http_poll.erl: Likewise
+
 2008-07-16  Badlop  <badlop@process-one.net>
 
 	* doc/guide.tex: Improve explanation of option 'hosts' in
